Port chatlog codecification to fix #178